# semantic-kernel-py-training

./: .gitignore  README.md  docker-compose.yml  docker-entrypoint.sh  dockerfile  main.tf  pyproject.toml
.github/templates/: main_aoai-log-handler.yml  main_publish-aks.yml
.github/workflows/: main_aoai-log-handler.yml  main_cemex-servicenow-rag-rcataldi.yml  main_publish-aks.yml  main_publish-container-image.yaml  main_publish-webapp.yml
.github/workflows/.scripts/: build-and-publish.sh  provision-services.sh
.py-conf/: conf-env.ps1
app/: bg_tasks.py  main.py  research.py
app/agents/: __init__.py  agents.py  readme.md  utils.py
app/chat/: agents.py  readme.md  tools.py
app/patterns/: simple.py
app/patterns/multiplexor/: agents.py
app/patterns/orchestrator/: agents.py
app/patterns/researcher/: README.md  _abstract.py  main.py  plan.py  researchers.py  sources.py
app/patterns/simple/: __init__.py  simple.py
app/schemas/: __init__.py  agents.py  requests.py  responses.py
app/settings/: __init__.py  base.py  mongo.py  postgres.py  types.py
app/tools/: embeddings.py  memories.py  plans.py  readme.md
app/tools/memory/: README.md  __init__.py  _abstract.py  long_term.py  short_term.py
app/tools/memory/utils/: gmm.py  short_term.py
app/utils/: tracker.py
log_function/: function.py
semantik_researcher/: main.py  research.py
semantik_researcher/chat/: agents.py
semantik_researcher/schemas/: requests.py  responses.py
semantik_researcher/settings/: __init__.py
sk-main/: main.py
sk-main/chat/: prompt.py
sk-main/schemas/: __init__.py
sk-main/settings/: api.py  mongo.py
