[tool.poetry]
name = "semantic-kernel-py-training"
version = "0.1.0"
description = ""
authors = ["Ricardo Cataldi <rcataldi@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
semantic-kernel = "^0.4.0.dev0"
fastapi = "^0.104.1"
polars = "^0.19.19"
motor = "^3.3.2"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.0"
nltk = "^3.8.1"
faiss-cpu = "^1.7.4"
azure-core = "^1.29.5"
azure-storage-blob = "^12.19.0"
azure-search-documents = "^11.4.0"
azure-identity = "^1.15.0"
langchain = "^0.0.340"
promptflow = "^1.4.1"
azure-search = "^1.0.0b2"
tiktoken = "^0.5.2"
ray = "^2.9.2"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
black = "^22.12.0"
pytest = "^7.4.3"
flake8 = "^6.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = true
in-project = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s"
testpaths = ["chat",]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "async: marks tests as async (select with '-m async')",
]

[tool.pylint]
good-names = ["i", "j", "k", "ex", "Run", "_"]
max-line-length = 75
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]
fail-under = 8.5

[tool.black]
line-length = 75
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 75


[tool.flake8]
max-complexity = 10
max-line-length = 75
ignore = ["E203", "E266", "E501", "W503"]
exclude = [
    ".venv",
    ".logs",
    ".git",
    "__pycache__",
    "build",
    "dist"
]
